fix card overlapped

--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ nav {
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 100vh;
+  /* height: 100vh; */
 }
 
 .logo {
